--- a/index.html
+++ b/index.html
@@ -82,8 +82,64 @@
         </div>
         </section>
         </section>
-				<!-- Example of nested vertical slides -->
 
+        <section>
+        <h2>The Grid</h2>
+        <img src="img/grid.jpg" >
+        </section>
+
+        <section>
+        <section>
+        <h2>SVG elements</h2>
+        <h3>Rectangle</h3>
+        <pre><code>
+        &lt;rect x="60" y="10" rx="10" ry="10" width="300" height="300"/&gt;
+        </pre></code>
+
+        <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 400; height: 400; margin: 0 auto;" >
+        <rect x="60" y="10" rx="10" ry="10" width="300" height="300"/>
+        </svg>
+        </section>
+        <section>
+        <h2>SVG elements</h2>
+        <h3>Circle and Ellipse</h3>
+        <pre><code>
+         &lt;circle cx="75" cy="75" r="100"/&gt;
+         &lt;ellipse cx="425" cy="75" rx="100" ry="50"/&gt;
+        </pre></code>
+
+        <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 800; height: 400; margin: 0 auto;" >
+         <circle cx="75" cy="75" r="100" />
+         <ellipse cx="425" cy="75" rx="100" ry="50"/>
+        </svg>
+        </section>
+        <section>
+        <h2>SVG elements</h2>
+        <h3>Lines and Polylines</h3>
+        <pre><code>
+&lt;line x1="10" x2="50" y1="110" y2="150"/&gt;
+&lt;polyline points="60 110, 65 120, 70 115, 75 130, 80 125, 85 140, 90 135, 95 150, 100 145"/&gt;
+        </pre></code>
+
+        <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 800; height: 400; margin: 0 auto;" >
+         <line x1="10" y1="50" x2="410" y2="350" style="stroke: black"/>
+         <polyline points="60 110, 65 120, 70 115, 75 130, 80 125, 85 140, 90 135, 95 150, 100 145" style="stroke: black"/>
+        </svg>
+        </section>
+        <section>
+        <h2>SVG elements</h2>
+        <h3>Polygons and Paths</h3>
+        <pre><code>
+ &lt;polygon points="50 160, 55 180, 70 180, 60 190, 65 205, 50 195, 35 205, 40 190, 30 180, 45 180"/&gt;
+ &lt;path d="M 20 230 Q 40 205, 50 230 T 90230"/&gt;
+        </pre></code>
+
+        <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 800; height: 400; margin: 0 auto;" >
+         <polygon points="50 160, 55 180, 70 180, 60 190, 65 205, 50 195, 35 205, 40 190, 30 180, 45 180"/>
+         <path d="M 20 230 Q 40 205, 50 230 T 90230"/>
+        </svg>
+        </section>
+        </section>
 
 				<section data-state="customevent">
 					<h2>Custom Events</h2>
@@ -124,7 +180,6 @@
 		<!-- Optional libraries for code syntax highlighting and classList support in IE9 -->
 		<script src="lib/highlight.js"></script>
 		<script src="lib/classList.js"></script>
-		
 		<script src="js/reveal.js"></script>
 		
 		<script>
