Add caniuse, with intro/thanks

--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
 				<section>
           <h2>Agenda</h2>
           <ul>
-            <li>skldfj</li>
-            <li>skldfj</li>
-            <li>skldfj</li>
-            <li>skldfj</li>
+            <li>What is SVG</li>
+            <li>Why it's awesome</li>
+            <li>How to use it</li>
           </ul>
 				</section>
 				
@@ -141,17 +140,29 @@
         </section>
         </section>
 
-				<section data-state="customevent">
-					<h2>Custom Events</h2>
-					<p>
-						Additionally custom events can be triggered on a per slide basis by binding to the <code>data-state</code> name.
-					</p>
-					<pre><code contenteditable style="font-size: 18px; margin-top: 20px;">Reveal.addEventListener( 'customevent', function() {
-	alert( '"customevent" has fired' );
-} );
-					</code></pre>
-				</section>
+        <section>
+        <h2>Tools</h2>
+        <ul>
+          <li>Inkscape</li>
+          <li>Raphael</li>
+          <li>d3</li>
+        </ul>
+        </section>
 
+        <section>
+        <h2>Demo</h2>
+        </section>
+
+
+        <section>
+        <h2>Where can I use this?</h2>
+        <a href="http://html5please.com/#svg"><img src="img/caniuse.png"></a>
+        </section>
+
+        <section>
+        <h1>Thanks</h1>
+        <a href="http://www.cornify.com" onclick="cornify_add();return false;"><img src="http://www.cornify.com/assets/cornify.gif" width="61" height="16" border="0" alt="Cornify" /></a><script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
+        </section>
 				<section>
 					<h2>Fragmented Views</h2>
 					<p>Hit the next arrow...</p>
