Add links to examples

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
             </section>
             <section>
             <h2>Examples</h2>
+            <ul>
+              <li><a href="http://croczilla.com/bits_and_pieces/svg/samples/tiger/tiger.svg">http://croczilla.com/bits_and_pieces/svg/samples/tiger/tiger.svg</a></li>
+              <li><a href="http://bl.ocks.org/d/1256572/">http://bl.ocks.org/d/1256572/</a></li>
+              <li><a href="http://mbostock.github.com/d3/talk/20111116/gears.html">http://mbostock.github.com/d3/talk/20111116/gears.html</a></li>
+              <li><a href="http://color.method.ac/">http://color.method.ac/</a></li>
           </section>
         </section>
 
