--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 		
 		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/preso.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/print.css" type="text/css" media="print">
 
@@ -62,22 +63,12 @@
               <li><a href="http://color.method.ac/">http://color.method.ac/</a></li>
           </section>
         </section>
-
-        <section>
-        <section>
-        <h2>How to embed on page</h2>
-        <pre><code>&lt;object data="image.svg" type="image/svg+xml" /&gt;</code></pre>
-        </section>
+        
         <section>
         <h2>How to embed on page</h2>
         <pre><code>&lt;iframe src="image.svg" /&gt;</code></pre>
-        </section>
-
-        <section>
-        <h2>How to embed on page</h2>
-        <ul>
-          <li><code>&lt;svg&gt;</code> element</li>
-        </ul>
+        <pre><code>&lt;object data="image.svg" type="image/svg+xml" /&gt;</code></pre>
+        <pre><code>&lt;svg&gt;</code></pre>
         <div>
           <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 400; height: 400; margin: 0 auto;" >
           <rect width="100%" height="100%" fill="steelblue" />
@@ -85,7 +76,6 @@
           <text x="150" y="200" font-size="100" text-anchor="middle" fill="white" font-family="Helvetica">SVG</text>
           </svg>
         </div>
-        </section>
         </section>
 
         <section>
@@ -113,7 +103,7 @@
          &lt;ellipse cx="425" cy="75" rx="100" ry="50"/&gt;
         </pre></code>
 
-        <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 800; height: 400; margin: 0 auto;" >
+        <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 800; height: 400; margin: 0 auto; background-color:white" >
          <circle cx="75" cy="75" r="100" />
          <ellipse cx="425" cy="75" rx="100" ry="50"/>
         </svg>
