--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         &lt;rect x="60" y="10" rx="10" ry="10" width="300" height="300"/&gt;
         </pre></code>
 
-        <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 400; height: 400; margin: 0 auto;" >
+        <svg class="baseColors" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 400; height: 400; margin: 0 auto;" >
         <rect x="60" y="10" rx="10" ry="10" width="300" height="300"/>
         </svg>
         </section>
@@ -103,7 +103,7 @@
          &lt;ellipse cx="425" cy="75" rx="100" ry="50"/&gt;
         </pre></code>
 
-        <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 800; height: 400; margin: 0 auto; background-color:white" >
+        <svg class="baseColors" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 800; height: 400; margin: 0 auto; background-color:white" >
          <circle cx="75" cy="75" r="100" />
          <ellipse cx="425" cy="75" rx="100" ry="50"/>
         </svg>
@@ -116,7 +116,7 @@
 &lt;polyline points="60 110, 65 120, 70 115, 75 130, 80 125, 85 140, 90 135, 95 150, 100 145"/&gt;
         </pre></code>
 
-        <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 800; height: 400; margin: 0 auto;" >
+        <svg class="baseColors" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 800; height: 400; margin: 0 auto;" >
          <line x1="10" y1="50" x2="410" y2="350" style="stroke: black"/>
          <polyline points="60 110, 65 120, 70 115, 75 130, 80 125, 85 140, 90 135, 95 150, 100 145" style="stroke: black"/>
         </svg>
@@ -129,7 +129,7 @@
  &lt;path d="M 20 230 Q 40 205, 50 230 T 90230"/&gt;
         </pre></code>
 
-        <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 800; height: 400; margin: 0 auto;" >
+        <svg class="baseColors" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" style="width: 800; height: 400; margin: 0 auto;" >
          <polygon points="50 160, 55 180, 70 180, 60 190, 65 205, 50 195, 35 205, 40 190, 30 180, 45 180"/>
            <path d="M10 80 C 40 10, 65 10, 95 80 S 150 150, 180 80" stroke="black" fill="transparent"/>
         </svg>
@@ -147,6 +147,7 @@
 
         <section>
         <h2>Demo</h2>
+        <a href="http://localhost:8081">Triathlon Race Results</a>
         </section>
 
 
