Update link to demo app

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <section>
         <h2>Demo</h2>
-        <a href="http://localhost:8081">Triathlon Race Results</a>
+        <a href="http://www.matthew-steele.com/talks/svg-races/">Triathlon Race Results</a>
         </section>
 
 
